--- a/less/_variables.less
+++ b/less/_variables.less
@@ -10,7 +10,7 @@
 @main-text: @main-color;      /* main Brown almost Black color */
 @title-text: #f68b5b;         /* Medium Orange third color */
 /* @bg-btn: rgba(246,139,91,.8);  Medium Orange with opacity */
-@bg-btn: rgba(30,10,2,.8); /* Medium Orange with opacity */
+@bg-opacity: rgba(255,255,255,.8); /* White with opacity */
 
 @white: #fff;
 @grey-3: #333;
