--- a/templates/index.pug
+++ b/templates/index.pug
@@ -282,30 +282,30 @@ html(lang='es')
               h3 Logotipos e imagen corporativa:
               p ...
               .clearfix
-              img(src='img/dist/arts/1.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/2.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/3.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/4.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/5.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/6.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/7.jpg', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/8.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/9.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/10.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/11.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/12.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/13.png', alt='Fotografía de animalicos')
-              img(src='img/dist/arts/14.png', alt='Fotografía de animalicos')
+              img(src='img/dist/arts/1.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/2.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/3.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/4.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/5.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/6.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/7.jpg', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/8.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/9.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/10.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/11.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/12.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/13.png', alt='Diseño de logo', title='')
+              img(src='img/dist/arts/14.png', alt='Diseño de logo', title='')
               .clearfix
           //- Panel items 2 :: Merchandising & Packaging works in Portfolio Section
           div(data-panel='panel-2')
             div
-              h3 Merchandising & Packaging
+              h3 Merchandising & Packaging:
               p Cambio de imagen con muy poco presupuesto...
               .clearfix
-              img(src='img/dist/merchan/17.png', alt='')
-              img(src='img/dist/merchan/18.png', alt='')
-              img(src='img/dist/merchan/19.png', alt='')
+              img(src='img/dist/merchan/17.png', alt='', title='')
+              img(src='img/dist/merchan/18.png', alt='', title='')
+              img(src='img/dist/merchan/19.png', alt='', title='')
               .clearfix
           //- Panel items 3 :: Textile works in Portfolio Section
           div(data-panel='panel-3')
@@ -313,12 +313,12 @@ html(lang='es')
               h3 Diseños textiles:
               p Diseños textiles realizados para las marcas internacionales Rusty y British Knights entre 2005 y 2011.
               .clearfix
-              img(src='img/dist/textiles/1.png', alt='')
-              img(src='img/dist/textiles/2.png', alt='')
-              img(src='img/dist/textiles/3.png', alt='')
-              img(src='img/dist/textiles/4.png', alt='')
-              img(src='img/dist/textiles/5.png', alt='')
-              img(src='img/dist/textiles/6.png', alt='')
+              img(src='img/dist/textiles/1.png', alt='', title='')
+              img(src='img/dist/textiles/2.png', alt='', title='')
+              img(src='img/dist/textiles/3.png', alt='', title='')
+              img(src='img/dist/textiles/4.png', alt='', title='')
+              img(src='img/dist/textiles/5.png', alt='', title='')
+              img(src='img/dist/textiles/6.png', alt='', title='')
               .clearfix
           //- Panel items 4 :: Photography works in Portfolio Section
           div(data-panel='panel-4')
@@ -326,25 +326,25 @@ html(lang='es')
               h3 Fotografía profesional:
               p Fotografía de producto, localizaciones y/o moda.
               .clearfix
-              img(src='img/dist/photos/1.jpg', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/2.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/3.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/4.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/5.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/6.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/7.jpg', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/8.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/9.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/10.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/11.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/12.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/13.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/14.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/15.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/16.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/17.png', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/18.jpg', alt='Fotografía de animalicos')
-              img(src='img/dist/photos/51.jpg', alt='Fotografía de animalicos')
+              img(src='img/dist/photos/1.jpg', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/2.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/3.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/4.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/5.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/6.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/7.jpg', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/8.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/9.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/10.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/11.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/12.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/13.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/14.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/15.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/16.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/17.png', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/18.jpg', alt='Fotografía de animalicos', title='')
+              img(src='img/dist/photos/51.jpg', alt='Fotografía de animalicos', title='')
               .clearfix
           //- Panel items 5 :: Draws & handly artworks in Portfolio Section
           div(data-panel='panel-5')
@@ -352,22 +352,22 @@ html(lang='es')
               h3 Dibujos y artes:
               p Ilustración a mano alzada, bocateje, comic, storyboards...
               .clearfix
-              img(src='img/dist/draws/60.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/61.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/62.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/63.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/64.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/65.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/66.jpg', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/67.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/68.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/69.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/70.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/71.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/72.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/73.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/74.png', alt='Fotografía de animalicos')
-              img(src='img/dist/draws/75.png', alt='Fotografía de animalicos')
+              img(src='img/dist/draws/60.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/61.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/62.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/63.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/64.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/65.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/66.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/67.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/68.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/69.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/70.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/71.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/72.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/73.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/74.png', alt='Ilustración de ...', title='')
+              img(src='img/dist/draws/75.png', alt='Ilustración de ...', title='')
               .clearfix
           //- Panel items 6 :: Business Cards works in Portfolio Section
           div(data-panel='panel-6')
@@ -375,12 +375,12 @@ html(lang='es')
               h3 Tarjetas de visita:
               p Diseños textiles realizados para las marcas internacionales Rusty y British Knights entre 2005 y 2011.
               .clearfix
-              img(src='img/dist/bcards/9.png', alt='')
-              img(src='img/dist/bcards/10.png', alt='')
-              img(src='img/dist/bcards/11.png', alt='')
-              img(src='img/dist/bcards/12.png', alt='')
-              img(src='img/dist/bcards/20.png', alt='')
-              img(src='img/dist/bcards/29.png', alt='')
+              img(src='img/dist/bcards/9.png', alt='Tarjeta de visita de ...', title='Tarjeta de visita de ...')
+              img(src='img/dist/bcards/10.png', alt='Tarjeta de visita de ...', title='Tarjeta de visita de ...')
+              img(src='img/dist/bcards/11.png', alt='Tarjeta de visita de ...', title='Tarjeta de visita de ...')
+              img(src='img/dist/bcards/12.png', alt='Tarjeta de visita de ...', title='Tarjeta de visita de ...')
+              img(src='img/dist/bcards/20.png', alt='Tarjeta de visita de ...', title='Tarjeta de visita de ...')
+              img(src='img/dist/bcards/29.png', alt='Tarjeta de visita de ...', title='Tarjeta de visita de ...')
               .clearfix
           //- Panel items 7 :: Business Cards works in Portfolio Section
           div(data-panel='panel-7')
@@ -388,12 +388,12 @@ html(lang='es')
               h3 Flyers y cartelería:
               p Diseños offset...
               .clearfix
-              img(src='img/dist/flyers/5.png', alt='')
-              img(src='img/dist/flyers/6.png', alt='')
-              img(src='img/dist/flyers/7.png', alt='')
-              img(src='img/dist/flyers/8.png', alt='')
-              img(src='img/dist/flyers/30.png', alt='')
-              img(src='img/dist/flyers/31.png', alt='')
+              img(src='img/dist/flyers/5.png', alt='Flyer de ...', title='Flyer de ...')
+              img(src='img/dist/flyers/6.png', alt='Flyer de ...', title='Flyer de ...')
+              img(src='img/dist/flyers/7.png', alt='Flyer de ...', title='Flyer de ...')
+              img(src='img/dist/flyers/8.png', alt='Flyer de ...', title='Flyer de ...')
+              img(src='img/dist/flyers/30.png', alt='Flyer de ...', title='Flyer de ...')
+              img(src='img/dist/flyers/31.png', alt='Flyer de ...', title='Flyer de ...')
               .clearfix
           //- Panel items 8 :: Business Cards works in Portfolio Section
           div(data-panel='panel-8')
@@ -401,9 +401,9 @@ html(lang='es')
               h3 Etiquetas:
               p Diseños textiles...
               .clearfix
-              img(src='img/dist/labels/21.png', alt='')
-              img(src='img/dist/labels/22.png', alt='')
-              img(src='img/dist/labels/24.png', alt='')
+              img(src='img/dist/labels/21.png', alt='Etiqueta exterior de ...', title='Etiqueta exterior de ...')
+              img(src='img/dist/labels/22.png', alt='Etiqueta exterior de ...', title='Etiqueta exterior de ...')
+              img(src='img/dist/labels/24.png', alt='Etiqueta exterior de ...', title='Etiqueta exterior de ...')
               .clearfix
           //- Panel items 9 :: Business Cards works in Portfolio Section
           div(data-panel='panel-9')
@@ -411,26 +411,29 @@ html(lang='es')
               h3 Cartelería y maquetaciones:
               p Maquetación, diseño editorial...
               .clearfix
-              img(src='img/dist/layout/1.png', alt='')
-              img(src='img/dist/layout/2.png', alt='')
-              img(src='img/dist/layout/3.png', alt='')
-              img(src='img/dist/layout/4.png', alt='')
-              img(src='img/dist/layout/13.png', alt='')
-              img(src='img/dist/layout/14.png', alt='')
-              img(src='img/dist/layout/15.png', alt='')
-              img(src='img/dist/layout/16.png', alt='')
-              img(src='img/dist/layout/23.png', alt='')
-              img(src='img/dist/layout/30.png', alt='')
-              img(src='img/dist/layout/40.png', alt='')
-              img(src='img/dist/layout/41.png', alt='')
-              img(src='img/dist/layout/42.png', alt='')
-              img(src='img/dist/layout/43.png', alt='')
+              img(src='img/dist/layout/1.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/2.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/3.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/4.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/13.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/14.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/15.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/16.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/23.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/30.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/40.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/41.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/42.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
+              img(src='img/dist/layout/43.png', alt='Cartel promocional de ...', title='Cartel promocional de ...')
               .clearfix
           //- Navigation Controls
           nav
-            span.bl-next-work > Siguiente
             span.bl-icon.bl-icon-close
-              i.fa.fa-close
+              i.fa.fa-close 
+              | Cerrar
+            span.bl-next-work
+              | Siguiente
+              i.fa.fa-arrow-right(aria-hidden="true")  
         //- /.bl-panel-items
       //- /.bl-main
     //- /.container
