--- a/less/style.less
+++ b/less/style.less
@@ -1000,7 +1000,9 @@ section.section-four {
            font-size: 1.8em; 
         }
     }
-    
+}
+
+@media (max-width: 480px) and (max-height: 780px) {
     // MAIN FRAME (INDEX VIEW)
     .bl-main > section {
 
@@ -1039,7 +1041,7 @@ section.section-four {
     }
 }
 
-@media screen and (max-height: 668px) {
+@media (max-width: 480px) and (max-height: 668px) {
     .logointro {
         margin-top: 20px;
     }
