--- a/less/style.less
+++ b/less/style.less
@@ -1002,6 +1002,8 @@ section.section-four {
     }
 }
 
+/* todo: fix media queries Height
+
 @media (max-width: 480px) and (max-height: 780px) {
     // MAIN FRAME (INDEX VIEW)
     .bl-main > section {
@@ -1049,6 +1051,7 @@ section.section-four {
         padding-top: 0;
     }
 }
+*/
 
 
 
